# fibo-mcp

./: .gitignore  LICENSE  README.md  constants.py  fibo.py  fibo_eda.ipynb  loader.py  main.py  pyproject.toml  test.py  test_fibo.py  test_main.py
.claude/skills/diagramming-expert/: SKILL.md  diagramming_expert.md
.claude/skills/diagramming-expert/references/: patterns-library.md
.claude/skills/diagramming_expert/: SKILL.md
.claude/skills/diagramming_expert/references/: patterns-library.md
assets/: what-is-a-country-cc-log.txt  what-is-corporate.txt
notebook/: .env.example  ablation-study.ipynb
