[project]
name = "fibo-mcp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastmcp>=2.0.0",
  "google-generativeai>=0.8.6",
  "rank-bm25>=0.2.2",
  "rdflib>=7.0.0",
  "toon-format",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "rdflib[networkx]>=7.0.0",
  "pandas>=2.0.0",
  "matplotlib>=3.5.0",
  "jupyterlab>=4.0.0",
  "ipython>=8.37.0",
  "scipy>=1.10.0",
  "google-genai>=1.0.0",
]

pgm = [
  "numpyro>=0.15.0",
  "jax>=0.4.0",
  "jaxlib>=0.4.0",
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
  "arviz>=0.18.0",
  "tqdm>=4.60.0",
  "funsor>=0.4.5",
]

[tool.uv.sources]
toon-format = { git = "https://github.com/toon-format/toon-python.git" }
